2021-03-27  Peter Bloomfield  <pbloomfield@bellsouth.net>

	imap-handle: use a flexible array member

	to append data to struct ImapMsgSerialized.

	Thanks to @albrecht for the suggestion and reference to the C99
	standard, in https://gitlab.gnome.org/GNOME/balsa/-/issues/57

	* libbalsa/imap/imap-handle.c:
	  struct ImapMsgSerialized: replace
	    - gchar fetched_headers_first_char;
	    with a flexible array member
	    + gchar fetched_headers_data[];
	  (imap_message_serialize): adapt to the change;
	  (imap_message_deserialize): ditto.

2021-03-25  Peter Bloomfield  <pbloomfield@bellsouth.net>

	html: WebKit deprecation cleanup

	* libbalsa/html.c (lbh_web_view_new):
	webkit_settings_set_enable_plugins() is deprecated in 2.32 (we
	test for 2.31.91).

2021-03-22  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox: Lock destination when copying or moving

	* libbalsa/mailbox.c
	  (libbalsa_mailbox_real_messages_copy): remove guards;
	  (messages_copy_locked): helper;
	  (libbalsa_mailbox_messages_copy): guard and lock destination,
	    and use helper;
	  (libbalsa_mailbox_messages_move): ditto.

2021-03-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	imap-handle: check for non-compliant responses

	* libbalsa/imap/imap-handle.c
	  (imap_cmd_step): disconnect if a protocol error is found;
	  (ir_exists): check that the handle is either authenticated or selected;
	  (ir_recent): ditto;
	  (ir_fetch_seq): check that the handle is selected;
	  (ir_expunge): ditto; also check that the sequence number of
	    the expunged message is valid.

2021-03-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Try to avoid critical messages

	* libbalsa/mailbox_imap.c
	  (imap_expunge_idle): handle expunged messages in the order
	    they are expunged;
	  (libbalsa_mailbox_imap_fetch_headers): avoid a critical message.

2021-03-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Remove a scheduled idle callback at close time instead of at
	dispose time.
