@@ -8,6 +8,8 @@ soundlist_in_files = balsa.soundlist.in
 soundlist_DATA = $(soundlist_in_files:.soundlist.in=.soundlist)
 @INTLTOOL_SOUNDLIST_RULE@
 
-EXTRA_DIST = $(balsa_SOUNDS) $(soundlist_in_files)
+EXTRA_DIST = $(balsa_SOUNDS) $(soundlist_in_files) \
+	balsa.soundlist.meson	\
+	meson.build
 
 DISTCLEANFILES = $(soundlist_DATA)
